--- a/Sprint1/Task0.ipynb
+++ b/Sprint1/Task0.ipynb
@@ -209,16 +209,7 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Черный\n",
-      "Количество транспорта: 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "public interface IVehicle\n",
     "{\n",
@@ -265,6 +256,87 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "using System.Collections.Generic;\n",
+    "\n",
+    "public class Customer\n",
+    "{\n",
+    "    public int Id { get; set; }\n",
+    "    public string Name { get; set; }\n",
+    "    public string Email { get; set; }\n",
+    "    public string Password { get; set; }\n",
+    "    public Address Address { get; set; }\n",
+    "    public List<Order> Orders { get; set; }\n",
+    "\n",
+    "    public Customer()\n",
+    "    {\n",
+    "        Orders = new List<Order>();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Order\n",
+    "{\n",
+    "    public int Id { get; set; }\n",
+    "    public int CustomerId { get; set; }\n",
+    "    public System.DateTime OrderDate { get; set; }\n",
+    "    public double TotalPrice { get; set; }\n",
+    "    public string Status { get; set; }\n",
+    "    public List<OrderItem> Items { get; set; }\n",
+    "\n",
+    "    public Order()\n",
+    "    {\n",
+    "        Items = new List<OrderItem>();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class OrderItem\n",
+    "{\n",
+    "    public int ProductId { get; set; }\n",
+    "    public int Quantity { get; set; }\n",
+    "    public double PricePerUnit { get; set; }\n",
+    "}\n",
+    "\n",
+    "public class Product\n",
+    "{\n",
+    "    public int Id { get; set; }\n",
+    "    public string Name { get; set; }\n",
+    "    public string Description { get; set; }\n",
+    "    public Category Category { get; set; }\n",
+    "    public double Price { get; set; }\n",
+    "    public string ImageUrl { get; set; }\n",
+    "    public int StockQuantity { get; set; }\n",
+    "}\n",
+    "\n",
+    "public class Category\n",
+    "{\n",
+    "    public int Id { get; set; }\n",
+    "    public string Name { get; set; }\n",
+    "    public Category ParentCategory { get; set; }\n",
+    "}\n",
+    "\n",
+    "public class Address\n",
+    "{\n",
+    "    public int Id { get; set; }\n",
+    "    public string Street { get; set; }\n",
+    "    public string City { get; set; }\n",
+    "    public string State { get; set; }\n",
+    "    public string ZipCode { get; set; }\n",
+    "    public string Country { get; set; }\n",
+    "}\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -286,26 +358,7 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Количество животных: 1\n",
-      "Это Лев. Его цвет рыжий.\n",
-      "Лев идёт.\n",
-      "\n",
-      "Количество животных: 2\n",
-      "Это Попугай. Его цвет зелёный.\n",
-      "Попугай летит.\n",
-      "\n",
-      "Количество животных: 3\n",
-      "Это Змея. Её цвет чёрный.\n",
-      "Змея ползёт.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "public interface IAnimal\n",
     "{\n",
