--- a/Sprint1/Task3.ipynb
+++ b/Sprint1/Task3.ipynb
@@ -57,40 +57,7 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ID поставщика: 2; Название компании: Silent Hill; Тип продукции: Видеоигры\n",
-      "Предоставление котировки на товары или услуги.\n",
-      "Отправка заказа поставщику.\n",
-      "\n",
-      "ID поставщика: 15; Название компании: Biohazard; Тип продукции: Биологическое оружие\n",
-      "Год основания компании 2021.\n",
-      "Отправка заказа поставщику.\n",
-      "\n",
-      "ID поставщика: 28; Название компании: CyberLife; Тип продукции: Роботы\n",
-      "Предоставление котировки на товары или услуги.\n",
-      "Отправка заказа по адресу: Детроит\n",
-      "\n",
-      "ID поставщика: 52. Название компании: Балдёж. Тип продукции: Шоколад. Страна производства: Норвегия\n",
-      "Предоставление котировки на товары или услуги.\n",
-      "Отправка заказа поставщику.\n",
-      "\n",
-      "Взаимодействие между объектами:\n",
-      "Розничный продавец CyberLife делает заказ у производителя Biohazard.\n",
-      "Год основания компании 2021.\n",
-      "Отправка заказа по адресу: Детроит\n",
-      "\n",
-      "Импортер Балдёж предлагает свою продукцию Шоколад.\n",
-      "Предоставление котировки на товары или услуги.\n",
-      "Отправка заказа поставщику.\n",
-      "\n",
-      "Общее количество транспортных средств: 4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "public class Supplier\n",
     "{\n",
@@ -270,6 +237,280 @@
     "    Console.WriteLine();\n",
     "\n",
     "    Supplier.DisplayTotalSuppliers();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "\n",
+    "public class Product\n",
+    "{\n",
+    "    private string name;\n",
+    "    private decimal price;\n",
+    "    private int quantity;\n",
+    "    protected string category;\n",
+    "    internal string description;\n",
+    "\n",
+    "    public string Name\n",
+    "    {\n",
+    "        get { return name; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (!string.IsNullOrWhiteSpace(value))\n",
+    "                name = value;\n",
+    "            else\n",
+    "                throw new ArgumentException(\"Название товара не должно быть пустым.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public decimal Price\n",
+    "    {\n",
+    "        get { return price; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value > 0)\n",
+    "                price = value;\n",
+    "            else\n",
+    "                throw new ArgumentOutOfRangeException(\"Цена товара должна быть больше нуля.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public int Quantity\n",
+    "    {\n",
+    "        get { return quantity; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value >= 0)\n",
+    "                quantity = value;\n",
+    "            else\n",
+    "                throw new ArgumentOutOfRangeException(\"Количество товара не может быть отрицательным.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public string Category\n",
+    "    {\n",
+    "        get { return category; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (!string.IsNullOrWhiteSpace(value))\n",
+    "                category = value;\n",
+    "            else\n",
+    "                throw new ArgumentException(\"Категория товара не должна быть пустой.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public string Description\n",
+    "    {\n",
+    "        get { return description; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (!string.IsNullOrWhiteSpace(value))\n",
+    "                description = value;\n",
+    "            else\n",
+    "                throw new ArgumentException(\"Описание товара не должно быть пустым.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public Product(string name, decimal price, int quantity, string category, string description)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "        Price = price;\n",
+    "        Quantity = quantity;\n",
+    "        Category = category;\n",
+    "        Description = description;\n",
+    "    }\n",
+    "\n",
+    "    public decimal GetTotalPrice()\n",
+    "    {\n",
+    "        return price * quantity;\n",
+    "    }\n",
+    "\n",
+    "    public void UpdateQuantity(int amount)\n",
+    "    {\n",
+    "        quantity += amount;\n",
+    "    }\n",
+    "\n",
+    "    public string GetProductInfo()\n",
+    "    {\n",
+    "        return $\"Product: {name}, Price: {price:C}, Quantity: {quantity}, Category: {category}, Description: {description}\";\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Seller\n",
+    "{\n",
+    "    private string name;\n",
+    "    private string employeeID;\n",
+    "    protected decimal salary;\n",
+    "    internal string description;\n",
+    "    private List<Product> products;\n",
+    "\n",
+    "    public string Name\n",
+    "    {\n",
+    "        get { return name; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (!string.IsNullOrWhiteSpace(value))\n",
+    "                name = value;\n",
+    "            else\n",
+    "                throw new ArgumentException(\"Имя продавца не должно быть пустым.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public string EmployeeID\n",
+    "    {\n",
+    "        get { return employeeID; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (!string.IsNullOrWhiteSpace(value))\n",
+    "                employeeID = value;\n",
+    "            else\n",
+    "                throw new ArgumentException(\"ID продавца не должно быть пустым.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public decimal Salary\n",
+    "    {\n",
+    "        get { return salary; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (value > 0)\n",
+    "                salary = value;\n",
+    "            else\n",
+    "                throw new ArgumentOutOfRangeException(\"Зарплата продавца должна быть больше нуля.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public string Description\n",
+    "    {\n",
+    "        get { return description; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (!string.IsNullOrWhiteSpace(value))\n",
+    "                description = value;\n",
+    "            else\n",
+    "                throw new ArgumentException(\"Описание продавца не должно быть пустым.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public Seller(string name, string employeeID, decimal salary, string description)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "        EmployeeID = employeeID;\n",
+    "        Salary = salary;\n",
+    "        Description = description;\n",
+    "        this.products = new List<Product>();\n",
+    "    }\n",
+    "\n",
+    "    public void AddProduct(Product product)\n",
+    "    {\n",
+    "        products.Add(product);\n",
+    "    }\n",
+    "\n",
+    "    public void SellProduct(Product product, int quantity)\n",
+    "    {\n",
+    "        var existingProduct = products.Find(p => p.Name == product.Name);\n",
+    "        if (existingProduct != null)\n",
+    "        {\n",
+    "            existingProduct.UpdateQuantity(-quantity);\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Store\n",
+    "{\n",
+    "    private string storeName;\n",
+    "    private string location;\n",
+    "    public string storeHours;\n",
+    "    private List<Seller> sellers;\n",
+    "    private List<Product> products;\n",
+    "\n",
+    "    public string StoreName\n",
+    "    {\n",
+    "        get { return storeName; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (!string.IsNullOrWhiteSpace(value))\n",
+    "                storeName = value;\n",
+    "            else\n",
+    "                throw new ArgumentException(\"Название магазина не должно быть пустым.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public string Location\n",
+    "    {\n",
+    "        get { return location; }\n",
+    "        set\n",
+    "        {\n",
+    "            if (!string.IsNullOrWhiteSpace(value))\n",
+    "                location = value;\n",
+    "            else\n",
+    "                throw new ArgumentException(\"Адрес магазина не должен быть пустым.\");\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public Store(string storeName, string location, string storeHours)\n",
+    "    {\n",
+    "        StoreName = storeName;\n",
+    "        Location = location;\n",
+    "        this.storeHours = storeHours;\n",
+    "        this.sellers = new List<Seller>();\n",
+    "        this.products = new List<Product>();\n",
+    "    }\n",
+    "\n",
+    "    public void AddSeller(Seller seller)\n",
+    "    {\n",
+    "        sellers.Add(seller);\n",
+    "    }\n",
+    "\n",
+    "    public void AddProduct(Product product)\n",
+    "    {\n",
+    "        products.Add(product);\n",
+    "    }\n",
+    "\n",
+    "    public void ListProducts()\n",
+    "    {\n",
+    "        foreach (var product in products)\n",
+    "        {\n",
+    "            Console.WriteLine(product.GetProductInfo());\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    public string GetStoreInfo()\n",
+    "    {\n",
+    "        return $\"Store: {storeName}, Location: {location}, Hours: {storeHours}\";\n",
+    "    }\n",
+    "}\n",
+    "// Создание экземпляров классов\n",
+    "Product product1 = new Product(\"Laptop\", 1200.00m, 10, \"Electronics\", \"High-end laptop\");\n",
+    "Seller seller1 = new Seller(\"John Doe\", \"S001\", 3000.00m, \"Senior Salesman\");\n",
+    "Store store1 = new Store(\"Tech Store\", \"123 Main St\", \"9 AM - 9 PM\");\n",
+    "\n",
+    "// Добавление товара и продавца в магазин\n",
+    "store1.AddProduct(product1);\n",
+    "store1.AddSeller(seller1);\n",
+    "\n",
+    "// Вывод информации о магазине и товарах\n",
+    "Console.WriteLine(store1.GetStoreInfo());\n",
+    "store1.ListProducts();\n",
+    "\n",
+    "// Продажа товара\n",
+    "seller1.AddProduct(product1);\n",
+    "seller1.SellProduct(product1, 2);\n",
+    "\n",
+    "// Вывод обновленной информации о товаре\n",
+    "Console.WriteLine(product1.GetProductInfo());"
    ]
   }
  ],
