--- a/Sprint3/Task1.ipynb
+++ b/Sprint3/Task1.ipynb
@@ -173,8 +173,69 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Транспорт движется 60 km/h.\n",
+      "Автомобиль движется в Eco режиме.\n",
+      "Автомобиль переключает передачи вручную.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    public virtual void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Транспорт движется {speed} km/h.\");\n",
+    "    }\n",
+    "\n",
+    "    // Метод Drive(), принимающий string\n",
+    "    public void Drive(string mode)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Автомобиль движется в {mode} режиме.\");\n",
+    "    }\n",
+    "\n",
+    "    // Метод Drive(), принимающий bool\n",
+    "    public void Drive(bool isManual)\n",
+    "    {\n",
+    "        if (isManual)\n",
+    "        {\n",
+    "            Console.WriteLine(\"Автомобиль переключает передачи вручную.\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine(\"Автомобиль оснащен автоматической коробкой передач.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Производный класс Car, переопределяющий метод Drive()\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    public override void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Автомобиль движется {speed} km/h.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Производный класс Motorcycle, также переопределяющий метод Drive()\n",
+    "public class Motorcycle : Vehicle\n",
+    "{\n",
+    "    public override void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Мотоцикл движется {speed} km/h.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Vehicle myVehicle = new Vehicle();\n",
+    "\n",
+    "myVehicle.Drive(60); // Вызов метода Drive() с int параметром\n",
+    "myVehicle.Drive(\"Eco\"); // Вызов метода Drive() с string параметром\n",
+    "myVehicle.Drive(true); // Вызов метода Drive() с bool параметром"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -198,8 +259,148 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Кот спит 1 час/часов.\n",
+      "Кот спит в дневное время суток.\n",
+      "Кот спит в доме.\n",
+      "\n",
+      "Собака спит 5 час/часов.\n",
+      "Собака спит в ночное время суток.\n",
+      "Собака спит в доме.\n",
+      "\n",
+      "Птица спит 3 час/часов.\n",
+      "Птица спит в вечернее время суток.\n",
+      "Птица спит на улице.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    public virtual void Sleep(int hours)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Животное спит {hours} час/часов.\");\n",
+    "    }\n",
+    "\n",
+    "    // Метод Sleep(), принимающий string\n",
+    "    public virtual void Sleep(string mode)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Животное спит в {mode} время суток.\");\n",
+    "    }\n",
+    "\n",
+    "    // Метод Sleep(), принимающий bool\n",
+    "    public virtual void Sleep(bool isManual)\n",
+    "    {\n",
+    "        if (isManual)\n",
+    "        {\n",
+    "            Console.WriteLine(\"Животное спит в доме.\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine(\"Животное спит на улице.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Производный класс Cat, переопределяющий метод Sleep()\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public override void Sleep(int hours)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Кот спит {hours} час/часов.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Sleep(string mode)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Кот спит в {mode} время суток.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Sleep(bool isManual)\n",
+    "    {\n",
+    "        if (isManual)\n",
+    "        {\n",
+    "            Console.WriteLine(\"Кот спит в доме.\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine(\"Кот спит на улице.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Производный класс Dog, переопределяющий метод Sleep()\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public override void Sleep(int hours)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Собака спит {hours} час/часов.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Sleep(string mode)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Собака спит в {mode} время суток.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Sleep(bool isManual)\n",
+    "    {\n",
+    "        if (isManual)\n",
+    "        {\n",
+    "            Console.WriteLine(\"Собака спит в доме.\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine(\"Собака спит на улице.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Производный класс Bird, также переопределяющий метод Sleep()\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public override void Sleep(int hours)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Птица спит {hours} час/часов.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Sleep(string mode)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Птица спит в {mode} время суток.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Sleep(bool isManual)\n",
+    "    {\n",
+    "        if (isManual)\n",
+    "        {\n",
+    "            Console.WriteLine(\"Птица спит в доме.\");\n",
+    "        }\n",
+    "        else\n",
+    "        {\n",
+    "            Console.WriteLine(\"Птица спит на улице.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Cat myCat = new Cat();\n",
+    "myCat.Sleep(1); // Вызов метода Sleep() с int параметром\n",
+    "myCat.Sleep(\"дневное\"); // Вызов метода Sleep() с string параметром\n",
+    "myCat.Sleep(true); // Вызов метода Sleep() с bool параметром\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "Dog myDog = new Dog();\n",
+    "myDog.Sleep(5); \n",
+    "myDog.Sleep(\"ночное\"); \n",
+    "myDog.Sleep(true); \n",
+    "Console.WriteLine();\n",
+    "\n",
+    "Bird myBird = new Bird();\n",
+    "myBird.Sleep(3); \n",
+    "myBird.Sleep(\"вечернее\"); \n",
+    "myBird.Sleep(false);"
+   ]
   }
  ],
  "metadata": {
