--- a/Sprint3/Task3.ipynb
+++ b/Sprint3/Task3.ipynb
@@ -52,8 +52,432 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Индентификатор поставщика: 1, Название компании: ABC Manufacturing, Тип продукта: Electronics\n",
+      "Отправлено из ABC Manufacturing (основан в 1995)\n",
+      "заказ для ABC Manufacturing\n",
+      "Индентификатор поставщика: 2, Название компании: XYZ Retail, Тип продукта: Furniture\n",
+      "Отправлено из XYZ Retail\n",
+      "заказ для XYZ Retail at New York\n",
+      "Индентификатор поставщика: 3, Название компании: Global Imports, Тип продукта: Clothing (Origin Country: China)\n",
+      "Отправлено из Global Imports\n",
+      "заказ для Global Imports\n",
+      "Индентификатор поставщика: 1, Название компании: ABC Manufacturing, Тип продукта: Electronics\n",
+      "Индентификатор поставщика: 2, Название компании: XYZ Retail, Тип продукта: Furniture\n",
+      "Индентификатор поставщика: 3, Название компании: Global Imports, Тип продукта: Clothing (Origin Country: China)\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "\n",
+    "public abstract class Supplier\n",
+    "{\n",
+    "    public int SupplierId { get; set; }\n",
+    "    public string CompanyName { get; set; }\n",
+    "    public string ProductType { get; set; }\n",
+    "\n",
+    "    public virtual string GetCompanyInfo()\n",
+    "    {\n",
+    "        return $\"Индентификатор поставщика: {SupplierId}, Название компании: {CompanyName}, Тип продукта: {ProductType}\";\n",
+    "    }\n",
+    "\n",
+    "    public virtual string ProvideQuote()\n",
+    "    {\n",
+    "        return $\"Отправлено из {CompanyName}\";\n",
+    "    }\n",
+    "\n",
+    "    public virtual string SubmitOrder()\n",
+    "    {\n",
+    "        return $\"заказ для {CompanyName}\";\n",
+    "    }\n",
+    "}\n",
+    "public class Manufacturer : Supplier\n",
+    "{\n",
+    "    public int FoundedYear { get; set; }\n",
+    "    public string HeadquartersLocation { get; set; }\n",
+    "\n",
+    "    public override string ProvideQuote()\n",
+    "    {\n",
+    "        return base.ProvideQuote() + $\" (основан в {FoundedYear})\";\n",
+    "    }\n",
+    "\n",
+    "    public string GetManufacturingDetails()\n",
+    "    {\n",
+    "        return $\"Детали Производителя {CompanyName}: Главное здание находится {HeadquartersLocation}\";\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "public class Retailer : Supplier\n",
+    "{\n",
+    "    public string StoreLocation { get; set; }\n",
+    "    public int NumberOfStores { get; set; }\n",
+    "\n",
+    "    public override string SubmitOrder()\n",
+    "    {\n",
+    "        return base.SubmitOrder() + $\" at {StoreLocation}\";\n",
+    "    }\n",
+    "\n",
+    "    public string GetStoreDetails()\n",
+    "    {\n",
+    "        return $\"Детали магазина {CompanyName}: {NumberOfStores} магазин находится {StoreLocation}\";\n",
+    "    }\n",
+    "}\n",
+    "public class Importer : Supplier\n",
+    "{\n",
+    "    public string OriginCountry { get; set; }\n",
+    "    public string ExportDestination { get; set; }\n",
+    "\n",
+    "    public override string GetCompanyInfo()\n",
+    "    {\n",
+    "        return base.GetCompanyInfo() + $\" (Origin Country: {OriginCountry})\";\n",
+    "    }\n",
+    "\n",
+    "    public string GetExportDetails()\n",
+    "    {\n",
+    "        return $\"Поставка для {CompanyName}: поставка из {OriginCountry} для {ExportDestination}\";\n",
+    "    }\n",
+    "\n",
+    "    public void ExportGoods()\n",
+    "    {\n",
+    "        Console.WriteLine($\"{CompanyName} новая поставка из {OriginCountry} для {ExportDestination}.\");\n",
+    "    }\n",
+    "    \n",
+    "}\n",
+    "\n",
+    "\n",
+    "public class SupplierWithContact : Supplier\n",
+    "{\n",
+    "    public string ContactPerson { get; set; }\n",
+    "\n",
+    "    // Перегружаем метод ProvideQuote с параметром\n",
+    "    public string ProvideQuote(decimal discount)\n",
+    "    {\n",
+    "        return $\"Providing quote with a discount of {discount}% for {ProductType}.\";\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "public class SupplierList<T> where T : Supplier\n",
+    "{\n",
+    "    private readonly List<T> _suppliers = new List<T>();\n",
+    "\n",
+    "    public void AddSupplier(T supplier)\n",
+    "    {\n",
+    "        _suppliers.Add(supplier);\n",
+    "    }\n",
+    "\n",
+    "    public List<T> GetSuppliers()\n",
+    "    {\n",
+    "        return _suppliers;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    {\n",
+    "      \n",
+    "        Supplier manufacturer = new Manufacturer { SupplierId = 1, CompanyName = \"ABC Manufacturing\", ProductType = \"Electronics\", FoundedYear = 1995 };\n",
+    "        Supplier retailer = new Retailer { SupplierId = 2, CompanyName = \"XYZ Retail\", ProductType = \"Furniture\", StoreLocation = \"New York\" };\n",
+    "        Supplier importer = new Importer { SupplierId = 3, CompanyName = \"Global Imports\", ProductType = \"Clothing\", OriginCountry = \"China\" };\n",
+    "\n",
+    "        Console.WriteLine(manufacturer.GetCompanyInfo());\n",
+    "        Console.WriteLine(manufacturer.ProvideQuote());\n",
+    "        Console.WriteLine(manufacturer.SubmitOrder());\n",
+    "\n",
+    "        Console.WriteLine(retailer.GetCompanyInfo());\n",
+    "        Console.WriteLine(retailer.ProvideQuote());\n",
+    "        Console.WriteLine(retailer.SubmitOrder());\n",
+    "\n",
+    "        Console.WriteLine(importer.GetCompanyInfo());\n",
+    "        Console.WriteLine(importer.ProvideQuote());\n",
+    "        Console.WriteLine(importer.SubmitOrder());\n",
+    "\n",
+    "        // Использование generic класса\n",
+    "        SupplierList<Supplier> suppliers = new SupplierList<Supplier>();\n",
+    "        suppliers.AddSupplier(manufacturer);\n",
+    "        suppliers.AddSupplier(retailer);\n",
+    "        suppliers.AddSupplier(importer);\n",
+    "\n",
+    "        foreach (var supplier in suppliers.GetSuppliers())\n",
+    "        {\n",
+    "            Console.WriteLine(supplier.GetCompanyInfo());\n",
+    "        }\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(171,43): error CS0080: Constraints are not allowed on non-generic declarations\r\n(177,46): error CS0080: Constraints are not allowed on non-generic declarations\r\n(169,13): error CS0305: Using the generic type 'List<T>' requires 1 type arguments\r\n(171,30): error CS0246: The type or namespace name 'T' could not be found (are you missing a using directive or an assembly reference?)\r\n(177,33): error CS0246: The type or namespace name 'T' could not be found (are you missing a using directive or an assembly reference?)\r\n(225,32): error CS1503: Argument 1: cannot convert from 'RAM' to 'T'\r\n(169,35): error CS0305: Using the generic type 'List<T>' requires 1 type arguments\r\n(207,31): error CS1503: Argument 1: cannot convert from 'CPU' to 'T'\r\n(208,31): error CS1503: Argument 1: cannot convert from 'RAM' to 'T'\r\n(209,31): error CS1503: Argument 1: cannot convert from 'GPU' to 'T'\r\n(210,31): error CS1503: Argument 1: cannot convert from 'HDD' to 'T'",
+     "output_type": "error",
+     "traceback": [
+      "(171,43): error CS0080: Constraints are not allowed on non-generic declarations\r\n",
+      "(177,46): error CS0080: Constraints are not allowed on non-generic declarations\r\n",
+      "(169,13): error CS0305: Using the generic type 'List<T>' requires 1 type arguments\r\n",
+      "(171,30): error CS0246: The type or namespace name 'T' could not be found (are you missing a using directive or an assembly reference?)\r\n",
+      "(177,33): error CS0246: The type or namespace name 'T' could not be found (are you missing a using directive or an assembly reference?)\r\n",
+      "(225,32): error CS1503: Argument 1: cannot convert from 'RAM' to 'T'\r\n",
+      "(169,35): error CS0305: Using the generic type 'List<T>' requires 1 type arguments\r\n",
+      "(207,31): error CS1503: Argument 1: cannot convert from 'CPU' to 'T'\r\n",
+      "(208,31): error CS1503: Argument 1: cannot convert from 'RAM' to 'T'\r\n",
+      "(209,31): error CS1503: Argument 1: cannot convert from 'GPU' to 'T'\r\n",
+      "(210,31): error CS1503: Argument 1: cannot convert from 'HDD' to 'T'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "using System;\n",
+    "using System.Collections.Generic;\n",
+    "\n",
+    "public interface Unstallable\n",
+    "{\n",
+    "    void Install();\n",
+    "}\n",
+    "\n",
+    "public abstract class Component\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "    public decimal Price { get; set; }\n",
+    "\n",
+    "    public virtual string GetInfo()\n",
+    "    {\n",
+    "        return $\"Компонент: {Name}, Стоимость: {Price:C}\";\n",
+    "    }\n",
+    "\n",
+    "    public override string ToString()\n",
+    "    {\n",
+    "        return GetInfo();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class CPU : Component, Unstallable\n",
+    "{\n",
+    "    public int Cores { get; set; }\n",
+    "\n",
+    "    public override string GetInfo()\n",
+    "    {\n",
+    "        return $\"Центральный процессор: {Name}, Количество ядер: {Cores}, Стоимость: {Price:C} руб\";\n",
+    "    }\n",
+    "\n",
+    "    public void Install()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Установка процессора: {Name}\");\n",
+    "    }\n",
+    "\n",
+    "    public static bool operator ==(CPU c1, CPU c2)\n",
+    "    {\n",
+    "        return c1.Name == c2.Name && c1.Cores == c2.Cores && c1.Price == c2.Price;\n",
+    "    }\n",
+    "\n",
+    "    public static bool operator !=(CPU c1, CPU c2)\n",
+    "    {\n",
+    "        return !(c1 == c2);\n",
+    "    }\n",
+    "\n",
+    "    public override bool Equals(object obj)\n",
+    "    {\n",
+    "        return obj is CPU cpu && this == cpu;\n",
+    "    }\n",
+    "\n",
+    "    public override int GetHashCode()\n",
+    "    {\n",
+    "        return HashCode.Combine(Name, Cores, Price);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class RAM : Component, Unstallable\n",
+    "{\n",
+    "    public int Size { get; set; } \n",
+    "\n",
+    "    public override string GetInfo()\n",
+    "    {\n",
+    "        return $\"Оперативная память: {Name}, Размер: {Size} ГБ, Стоимость: {Price:C} руб\";\n",
+    "    }\n",
+    "\n",
+    "    public void Install()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Установка оперативной памяти: {Name}\");\n",
+    "    }\n",
+    "\n",
+    "    public static bool operator ==(RAM r1, RAM r2)\n",
+    "    {\n",
+    "        return r1.Name == r2.Name && r1.Size == r2.Size && r1.Price == r2.Price;\n",
+    "    }\n",
+    "\n",
+    "    public static bool operator !=(RAM r1, RAM r2)\n",
+    "    {\n",
+    "        return !(r1 == r2);\n",
+    "    }\n",
+    "\n",
+    "    public override bool Equals(object obj)\n",
+    "    {\n",
+    "        return obj is RAM ram && this == ram;\n",
+    "    }\n",
+    "\n",
+    "    public override int GetHashCode()\n",
+    "    {\n",
+    "        return HashCode.Combine(Name, Size, Price);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class GPU : Component, Unstallable\n",
+    "{\n",
+    "    public int Memory { get; set; } \n",
+    "\n",
+    "    public override string GetInfo()\n",
+    "    {\n",
+    "        return $\"Графический процессор: {Name}, Память: {Memory} ГБ, Стоимость: {Price:C} руб\";\n",
+    "    }\n",
+    "\n",
+    "    public void Install()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Установка графического процессора: {Name}\");\n",
+    "    }\n",
+    "\n",
+    "    public static bool operator ==(GPU g1, GPU g2)\n",
+    "    {\n",
+    "        return g1.Name == g2.Name && g1.Memory == g2.Memory && g1.Price == g2.Price;\n",
+    "    }\n",
+    "\n",
+    "    public static bool operator !=(GPU g1, GPU g2)\n",
+    "    {\n",
+    "        return !(g1 == g2);\n",
+    "    }\n",
+    "\n",
+    "    public override bool Equals(object obj)\n",
+    "    {\n",
+    "        return obj is GPU gpu && this == gpu;\n",
+    "    }\n",
+    "\n",
+    "    public override int GetHashCode()\n",
+    "    {\n",
+    "        return HashCode.Combine(Name, Memory, Price);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class HDD : Component, Unstallable\n",
+    "{\n",
+    "    public int Capacity { get; set; } \n",
+    "\n",
+    "    public override string GetInfo()\n",
+    "    {\n",
+    "        return $\"Жёсткий диск: {Name}, Емкость: {Capacity} ГБ, Стоимость: {Price:C} руб\";\n",
+    "    }\n",
+    "\n",
+    "    public void Install()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Установка жёсткого диска: {Name}\");\n",
+    "    }\n",
+    "\n",
+    "    public static bool operator ==(HDD h1, HDD h2)\n",
+    "    {\n",
+    "        return h1.Name == h2.Name && h1.Capacity == h2.Capacity && h1.Price == h2.Price;\n",
+    "    }\n",
+    "\n",
+    "    public static bool operator !=(HDD h1, HDD h2)\n",
+    "    {\n",
+    "        return !(h1 == h2);\n",
+    "    }\n",
+    "\n",
+    "    public override bool Equals(object obj)\n",
+    "    {\n",
+    "        return obj is HDD hdd && this == hdd;\n",
+    "    }\n",
+    "\n",
+    "    public override int GetHashCode()\n",
+    "    {\n",
+    "        return HashCode.Combine(Name, Capacity, Price);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Computer\n",
+    "{\n",
+    "    private List components = new List();\n",
+    "\n",
+    "    public void AddComponent(T component) where T : Component, Unstallable\n",
+    "    {\n",
+    "        components.Add(component);\n",
+    "        component.Install();\n",
+    "    }\n",
+    "\n",
+    "    public void RemoveComponent(T component) where T : Component\n",
+    "    {\n",
+    "        components.Remove(component);\n",
+    "        Console.WriteLine($\"Удаление компонента: {component.Name}\");\n",
+    "    }\n",
+    "\n",
+    "    public decimal GetTotalPrice()\n",
+    "    {\n",
+    "        decimal total = 0;\n",
+    "        foreach (var component in components)\n",
+    "        {\n",
+    "            total += component.Price;\n",
+    "        }\n",
+    "        return total;\n",
+    "    }\n",
+    "\n",
+    "    public void ShowComponents()\n",
+    "    {\n",
+    "        foreach (var component in components)\n",
+    "        {\n",
+    "            Console.WriteLine(component);\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public static class ComputerFactory\n",
+    "{\n",
+    "    public static Computer CreateGamingComputer()\n",
+    "    {\n",
+    "        var computer = new Computer();\n",
+    "        computer.AddComponent(new CPU { Name = \"Intel Core i5-13400F OEM\", Cores = 10, Price = 19299.99m });\n",
+    "        computer.AddComponent(new RAM { Name = \"Kingston FURY Beast Black\", Size = 32, Price = 10399.99m });\n",
+    "        computer.AddComponent(new GPU { Name = \"AMD Ryzen 7 5700G OEM\", Memory = 128, Price = 18499.99m });\n",
+    "        computer.AddComponent(new HDD { Name = \"Seagate BarraCuda\", Capacity = 2000, Price = 8299.99m });\n",
+    "        return computer;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Computer gamingComputer = ComputerFactory.CreateGamingComputer();\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "Console.WriteLine(\"Компоненты игрового компьютера:\");\n",
+    "gamingComputer.ShowComponents();\n",
+    "\n",
+    "Console.WriteLine($\"Общая стоимость: {gamingComputer.GetTotalPrice():C} руб\");\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "var ramToRemove = new RAM { Name = \"Kingston FURY Beast Black\", Size = 32, Price = 10399.99m };\n",
+    "gamingComputer.RemoveComponent(ramToRemove);\n",
+    "Console.WriteLine(); \n",
+    "\n",
+    "Console.WriteLine($\"Компоненты игрового компьютера после удаления:\");\n",
+    "gamingComputer.ShowComponents();\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "Console.WriteLine($\"Сравнение компонентов:\");\n",
+    "var c1 = new CPU { Name = \"Intel Core i5-13400F OEM\", Cores = 10, Price = 19299.99m };\n",
+    "var c2 = new CPU { Name = \"Intel Core i5-13400F OEM\", Cores = 10, Price = 19299.99m };\n",
+    "Console.WriteLine($\"Процессор №1 = Процессор №2: {c1 == c2}\");\n",
+    "\n",
+    "var r1 = new RAM { Name = \"Kingston FURY Beast Black\", Size = 32, Price = 9399.99m };\n",
+    "var r2 = new RAM { Name = \"Kingston FURY Beast Black\", Size = 32, Price = 10399.99m };\n",
+    "Console.WriteLine($\"Оперативная память №1 = Оперативная память №2: {r1 == r2}\");"
+   ]
   }
  ],
  "metadata": {
