--- a/Sprint3/Task0.ipynb
+++ b/Sprint3/Task0.ipynb
@@ -87,8 +87,56 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Автомобиль движется 100 km/h.\n",
+      "Мотоцикл движется 100 km/h.\n",
+      "Транспорт движется 100 km/h.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Vehicle\n",
+    "{\n",
+    "    public virtual void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Транспорт движется {speed} km/h.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Производный класс Car, переопределяющий метод Drive()\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    public override void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Автомобиль движется {speed} km/h.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Производный класс Motorcycle, также переопределяющий метод Drive()\n",
+    "public class Motorcycle : Vehicle\n",
+    "{\n",
+    "    public override void Drive(int speed)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Мотоцикл движется {speed} km/h.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "List<Vehicle> vehicles = new List<Vehicle>\n",
+    "{\n",
+    "    new Car(),\n",
+    "    new Motorcycle(),\n",
+    "    new Vehicle() // Добавляем экземпляр базового класса для демонстрации\n",
+    "};\n",
+    "\n",
+    "foreach (var vehicle in vehicles)\n",
+    "{\n",
+    "    vehicle.Drive(100); // Вызываем метод Drive() \n",
+    "}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,8 +160,67 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Кот спит 8 час/часов.\n",
+      "Собака спит 8 час/часов.\n",
+      "Птица спит 8 час/часов.\n",
+      "Животное спит 8 час/часов.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Animal\n",
+    "{\n",
+    "    public virtual void Sleep(int hours)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Животное спит {hours} час/часов.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Производный класс Cat, переопределяющий метод Sleep()\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public override void Sleep(int hours)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Кот спит {hours} час/часов.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Производный класс Dog, переопределяющий метод Sleep()\n",
+    "public class Dog : Animal\n",
+    "{\n",
+    "    public override void Sleep(int hours)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Собака спит {hours} час/часов.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "// Производный класс Bird, также переопределяющий метод Sleep()\n",
+    "public class Bird : Animal\n",
+    "{\n",
+    "    public override void Sleep(int hours)\n",
+    "    {\n",
+    "        Console.WriteLine($\"Птица спит {hours} час/часов.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "List<Animal> animals = new List<Animal>\n",
+    "{\n",
+    "    new Cat(),\n",
+    "    new Dog(),\n",
+    "    new Bird(),\n",
+    "    new Animal() // Добавляем экземпляр базового класса для демонстрации\n",
+    "};\n",
+    "\n",
+    "foreach (var animal in animals)\n",
+    "{\n",
+    "    animal.Sleep(8); // Вызываем метод Drive() \n",
+    "}"
+   ]
   }
  ],
  "metadata": {
