--- a/Sprint2/Task3.ipynb
+++ b/Sprint2/Task3.ipynb
@@ -395,7 +395,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "Manager myManager = new Manager(\"Софья\", \"Менеджер\", 80000, \"Отдел продаж\");\n",
+    "Manager myManager = new Manager(\"Мадина\", \"Менеджер\", 80000, \"Отдел продаж\");\n",
     "myManager.PrintInfo(); \n",
     "Console.WriteLine();\n",
     "\n",
