--- a/Sprint3/Task3.ipynb
+++ b/Sprint3/Task3.ipynb
@@ -216,34 +216,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "outputs": [
     {
-     "ename": "Error",
-     "evalue": "(171,43): error CS0080: Constraints are not allowed on non-generic declarations\r\n(177,46): error CS0080: Constraints are not allowed on non-generic declarations\r\n(169,13): error CS0305: Using the generic type 'List<T>' requires 1 type arguments\r\n(171,30): error CS0246: The type or namespace name 'T' could not be found (are you missing a using directive or an assembly reference?)\r\n(177,33): error CS0246: The type or namespace name 'T' could not be found (are you missing a using directive or an assembly reference?)\r\n(225,32): error CS1503: Argument 1: cannot convert from 'RAM' to 'T'\r\n(169,35): error CS0305: Using the generic type 'List<T>' requires 1 type arguments\r\n(207,31): error CS1503: Argument 1: cannot convert from 'CPU' to 'T'\r\n(208,31): error CS1503: Argument 1: cannot convert from 'RAM' to 'T'\r\n(209,31): error CS1503: Argument 1: cannot convert from 'GPU' to 'T'\r\n(210,31): error CS1503: Argument 1: cannot convert from 'HDD' to 'T'",
-     "output_type": "error",
-     "traceback": [
-      "(171,43): error CS0080: Constraints are not allowed on non-generic declarations\r\n",
-      "(177,46): error CS0080: Constraints are not allowed on non-generic declarations\r\n",
-      "(169,13): error CS0305: Using the generic type 'List<T>' requires 1 type arguments\r\n",
-      "(171,30): error CS0246: The type or namespace name 'T' could not be found (are you missing a using directive or an assembly reference?)\r\n",
-      "(177,33): error CS0246: The type or namespace name 'T' could not be found (are you missing a using directive or an assembly reference?)\r\n",
-      "(225,32): error CS1503: Argument 1: cannot convert from 'RAM' to 'T'\r\n",
-      "(169,35): error CS0305: Using the generic type 'List<T>' requires 1 type arguments\r\n",
-      "(207,31): error CS1503: Argument 1: cannot convert from 'CPU' to 'T'\r\n",
-      "(208,31): error CS1503: Argument 1: cannot convert from 'RAM' to 'T'\r\n",
-      "(209,31): error CS1503: Argument 1: cannot convert from 'GPU' to 'T'\r\n",
-      "(210,31): error CS1503: Argument 1: cannot convert from 'HDD' to 'T'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Создание базового компьютера:\n",
+      "Установка CPU: Intel Core i5\n",
+      "Установка RAM: 8GB DDR4\n",
+      "Установка GPU: NVIDIA GTX 1650\n",
+      "Установка HDD: 1TB HDD\n",
+      "CPU: Intel Core i5, Цена: ¤200.00\n",
+      "RAM: 8GB DDR4, Цена: ¤80.00\n",
+      "GPU: NVIDIA GTX 1650, Цена: ¤250.00\n",
+      "HDD: 1TB HDD, Цена: ¤50.00\n",
+      "Total Price: ¤580.00\n",
+      "Создание игрового компьютера:\n",
+      "Установка CPU: Intel Core i7\n",
+      "Установка RAM: 16GB DDR4\n",
+      "Установка GPU: NVIDIA RTX 3080\n",
+      "Установка HDD: 1TB SSD\n",
+      "CPU: Intel Core i7, Цена: ¤350.00\n",
+      "RAM: 16GB DDR4, Цена: ¤120.00\n",
+      "GPU: NVIDIA RTX 3080, Цена: ¤800.00\n",
+      "HDD: 1TB SSD, Цена: ¤150.00\n",
+      "Итоговая стоимость: ¤1,420.00\n",
+      "Удаляем компонент из игрового компьютера:\n",
+      "CPU: Intel Core i7, Цена: ¤350.00\n",
+      "RAM: 16GB DDR4, Цена: ¤120.00\n",
+      "HDD: 1TB SSD, Цена: ¤150.00\n",
+      "Итоговая стоимость после удаления компонента: ¤620.00\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "using System;\n",
     "using System.Collections.Generic;\n",
     "\n",
-    "public interface Unstallable\n",
+    "public interface IInstallable\n",
     "{\n",
     "    void Install();\n",
     "}\n",
@@ -251,232 +269,177 @@
     "public abstract class Component\n",
     "{\n",
     "    public string Name { get; set; }\n",
-    "    public decimal Price { get; set; }\n",
+    "    public double Price { get; set; }\n",
+    "\n",
+    "    public Component(string name, double price)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "        Price = price;\n",
+    "    }\n",
     "\n",
     "    public virtual string GetInfo()\n",
     "    {\n",
-    "        return $\"Компонент: {Name}, Стоимость: {Price:C}\";\n",
+    "        return $\"Компонент: {Name}, Цена: {Price:C}\";\n",
     "    }\n",
     "\n",
     "    public override string ToString()\n",
     "    {\n",
     "        return GetInfo();\n",
     "    }\n",
-    "}\n",
     "\n",
-    "public class CPU : Component, Unstallable\n",
-    "{\n",
-    "    public int Cores { get; set; }\n",
-    "\n",
-    "    public override string GetInfo()\n",
+    "    public static bool operator ==(Component c1, Component c2)\n",
     "    {\n",
-    "        return $\"Центральный процессор: {Name}, Количество ядер: {Cores}, Стоимость: {Price:C} руб\";\n",
+    "        if (ReferenceEquals(c1, c2)) return true;\n",
+    "        if (ReferenceEquals(c1, null) || ReferenceEquals(c2, null)) return false;\n",
+    "        return c1.Name == c2.Name && c1.Price == c2.Price;\n",
     "    }\n",
     "\n",
-    "    public void Install()\n",
-    "    {\n",
-    "        Console.WriteLine($\"Установка процессора: {Name}\");\n",
-    "    }\n",
-    "\n",
-    "    public static bool operator ==(CPU c1, CPU c2)\n",
-    "    {\n",
-    "        return c1.Name == c2.Name && c1.Cores == c2.Cores && c1.Price == c2.Price;\n",
-    "    }\n",
-    "\n",
-    "    public static bool operator !=(CPU c1, CPU c2)\n",
+    "    public static bool operator !=(Component c1, Component c2)\n",
     "    {\n",
     "        return !(c1 == c2);\n",
     "    }\n",
     "\n",
     "    public override bool Equals(object obj)\n",
     "    {\n",
-    "        return obj is CPU cpu && this == cpu;\n",
+    "        if (obj is Component other)\n",
+    "        {\n",
+    "            return this == other;\n",
+    "        }\n",
+    "        return false;\n",
     "    }\n",
     "\n",
     "    public override int GetHashCode()\n",
     "    {\n",
-    "        return HashCode.Combine(Name, Cores, Price);\n",
+    "        return (Name, Price).GetHashCode();\n",
     "    }\n",
     "}\n",
     "\n",
-    "public class RAM : Component, Unstallable\n",
+    "public class CPU : Component, IInstallable\n",
     "{\n",
-    "    public int Size { get; set; } \n",
+    "    public CPU(string name, double price) : base(name, price) { }\n",
     "\n",
     "    public override string GetInfo()\n",
     "    {\n",
-    "        return $\"Оперативная память: {Name}, Размер: {Size} ГБ, Стоимость: {Price:C} руб\";\n",
+    "        return $\"CPU: {Name}, Цена: {Price:C}\";\n",
     "    }\n",
     "\n",
     "    public void Install()\n",
     "    {\n",
-    "        Console.WriteLine($\"Установка оперативной памяти: {Name}\");\n",
-    "    }\n",
-    "\n",
-    "    public static bool operator ==(RAM r1, RAM r2)\n",
-    "    {\n",
-    "        return r1.Name == r2.Name && r1.Size == r2.Size && r1.Price == r2.Price;\n",
-    "    }\n",
-    "\n",
-    "    public static bool operator !=(RAM r1, RAM r2)\n",
-    "    {\n",
-    "        return !(r1 == r2);\n",
-    "    }\n",
-    "\n",
-    "    public override bool Equals(object obj)\n",
-    "    {\n",
-    "        return obj is RAM ram && this == ram;\n",
-    "    }\n",
-    "\n",
-    "    public override int GetHashCode()\n",
-    "    {\n",
-    "        return HashCode.Combine(Name, Size, Price);\n",
+    "        Console.WriteLine($\"Установка CPU: {Name}\");\n",
     "    }\n",
     "}\n",
     "\n",
-    "public class GPU : Component, Unstallable\n",
+    "public class RAM : Component, IInstallable\n",
     "{\n",
-    "    public int Memory { get; set; } \n",
+    "    public RAM(string name, double price) : base(name, price) { }\n",
     "\n",
     "    public override string GetInfo()\n",
     "    {\n",
-    "        return $\"Графический процессор: {Name}, Память: {Memory} ГБ, Стоимость: {Price:C} руб\";\n",
+    "        return $\"RAM: {Name}, Цена: {Price:C}\";\n",
     "    }\n",
     "\n",
     "    public void Install()\n",
     "    {\n",
-    "        Console.WriteLine($\"Установка графического процессора: {Name}\");\n",
-    "    }\n",
-    "\n",
-    "    public static bool operator ==(GPU g1, GPU g2)\n",
-    "    {\n",
-    "        return g1.Name == g2.Name && g1.Memory == g2.Memory && g1.Price == g2.Price;\n",
-    "    }\n",
-    "\n",
-    "    public static bool operator !=(GPU g1, GPU g2)\n",
-    "    {\n",
-    "        return !(g1 == g2);\n",
-    "    }\n",
-    "\n",
-    "    public override bool Equals(object obj)\n",
-    "    {\n",
-    "        return obj is GPU gpu && this == gpu;\n",
-    "    }\n",
-    "\n",
-    "    public override int GetHashCode()\n",
-    "    {\n",
-    "        return HashCode.Combine(Name, Memory, Price);\n",
+    "        Console.WriteLine($\"Установка RAM: {Name}\");\n",
     "    }\n",
     "}\n",
     "\n",
-    "public class HDD : Component, Unstallable\n",
+    "public class GPU : Component, IInstallable\n",
     "{\n",
-    "    public int Capacity { get; set; } \n",
+    "    public GPU(string name, double price) : base(name, price) { }\n",
     "\n",
     "    public override string GetInfo()\n",
     "    {\n",
-    "        return $\"Жёсткий диск: {Name}, Емкость: {Capacity} ГБ, Стоимость: {Price:C} руб\";\n",
+    "        return $\"GPU: {Name}, Цена: {Price:C}\";\n",
     "    }\n",
     "\n",
     "    public void Install()\n",
     "    {\n",
-    "        Console.WriteLine($\"Установка жёсткого диска: {Name}\");\n",
+    "        Console.WriteLine($\"Установка GPU: {Name}\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class HDD : Component, IInstallable\n",
+    "{\n",
+    "    public HDD(string name, double price) : base(name, price) { }\n",
+    "\n",
+    "    public override string GetInfo()\n",
+    "    {\n",
+    "        return $\"HDD: {Name}, Цена: {Price:C}\";\n",
     "    }\n",
     "\n",
-    "    public static bool operator ==(HDD h1, HDD h2)\n",
+    "    public void Install()\n",
     "    {\n",
-    "        return h1.Name == h2.Name && h1.Capacity == h2.Capacity && h1.Price == h2.Price;\n",
-    "    }\n",
-    "\n",
-    "    public static bool operator !=(HDD h1, HDD h2)\n",
-    "    {\n",
-    "        return !(h1 == h2);\n",
-    "    }\n",
-    "\n",
-    "    public override bool Equals(object obj)\n",
-    "    {\n",
-    "        return obj is HDD hdd && this == hdd;\n",
-    "    }\n",
-    "\n",
-    "    public override int GetHashCode()\n",
-    "    {\n",
-    "        return HashCode.Combine(Name, Capacity, Price);\n",
+    "        Console.WriteLine($\"Установка HDD: {Name}\");\n",
     "    }\n",
     "}\n",
     "\n",
     "public class Computer\n",
     "{\n",
-    "    private List components = new List();\n",
+    "    private List<Component> components = new List<Component>();\n",
     "\n",
-    "    public void AddComponent(T component) where T : Component, Unstallable\n",
+    "    public void AddComponent<T>(T component) where T : Component, IInstallable\n",
     "    {\n",
     "        components.Add(component);\n",
     "        component.Install();\n",
     "    }\n",
     "\n",
-    "    public void RemoveComponent(T component) where T : Component\n",
+    "    public void RemoveComponent<T>(T component) where T : Component\n",
     "    {\n",
     "        components.Remove(component);\n",
-    "        Console.WriteLine($\"Удаление компонента: {component.Name}\");\n",
     "    }\n",
     "\n",
-    "    public decimal GetTotalPrice()\n",
+    "    public double GetTotalPrice()\n",
     "    {\n",
-    "        decimal total = 0;\n",
-    "        foreach (var component in components)\n",
-    "        {\n",
-    "            total += component.Price;\n",
-    "        }\n",
-    "        return total;\n",
+    "        return components.Sum(c => c.Price);\n",
     "    }\n",
     "\n",
-    "    public void ShowComponents()\n",
+    "    public void DisplayComponents()\n",
     "    {\n",
     "        foreach (var component in components)\n",
     "        {\n",
-    "            Console.WriteLine(component);\n",
+    "            Console.WriteLine(component.GetInfo());\n",
     "        }\n",
     "    }\n",
     "}\n",
     "\n",
     "public static class ComputerFactory\n",
     "{\n",
+    "    public static Computer CreateBasicComputer()\n",
+    "    {\n",
+    "        Computer computer = new Computer();\n",
+    "        computer.AddComponent(new CPU(\"Intel Core i5\", 200));\n",
+    "        computer.AddComponent(new RAM(\"8GB DDR4\", 80));\n",
+    "        computer.AddComponent(new GPU(\"NVIDIA GTX 1650\", 250));\n",
+    "        computer.AddComponent(new HDD(\"1TB HDD\", 50));\n",
+    "        return computer;\n",
+    "    }\n",
+    "\n",
     "    public static Computer CreateGamingComputer()\n",
     "    {\n",
-    "        var computer = new Computer();\n",
-    "        computer.AddComponent(new CPU { Name = \"Intel Core i5-13400F OEM\", Cores = 10, Price = 19299.99m });\n",
-    "        computer.AddComponent(new RAM { Name = \"Kingston FURY Beast Black\", Size = 32, Price = 10399.99m });\n",
-    "        computer.AddComponent(new GPU { Name = \"AMD Ryzen 7 5700G OEM\", Memory = 128, Price = 18499.99m });\n",
-    "        computer.AddComponent(new HDD { Name = \"Seagate BarraCuda\", Capacity = 2000, Price = 8299.99m });\n",
+    "        Computer computer = new Computer();\n",
+    "        computer.AddComponent(new CPU(\"Intel Core i7\", 350));\n",
+    "        computer.AddComponent(new RAM(\"16GB DDR4\", 120));\n",
+    "        computer.AddComponent(new GPU(\"NVIDIA RTX 3080\", 800));\n",
+    "        computer.AddComponent(new HDD(\"1TB SSD\", 150));\n",
     "        return computer;\n",
     "    }\n",
     "}\n",
     "\n",
+    "Console.WriteLine(\"Создание базового компьютера:\");\n",
+    "Computer basicComputer = ComputerFactory.CreateBasicComputer();\n",
+    "basicComputer.DisplayComponents();\n",
+    "Console.WriteLine($\"Total Price: {basicComputer.GetTotalPrice():C}\");\n",
+    "Console.WriteLine(\"Создание игрового компьютера:\");\n",
     "Computer gamingComputer = ComputerFactory.CreateGamingComputer();\n",
-    "Console.WriteLine();\n",
+    "gamingComputer.DisplayComponents();\n",
+    "Console.WriteLine($\"Итоговая стоимость: {gamingComputer.GetTotalPrice():C}\");\n",
     "\n",
-    "Console.WriteLine(\"Компоненты игрового компьютера:\");\n",
-    "gamingComputer.ShowComponents();\n",
-    "\n",
-    "Console.WriteLine($\"Общая стоимость: {gamingComputer.GetTotalPrice():C} руб\");\n",
-    "Console.WriteLine();\n",
-    "\n",
-    "var ramToRemove = new RAM { Name = \"Kingston FURY Beast Black\", Size = 32, Price = 10399.99m };\n",
-    "gamingComputer.RemoveComponent(ramToRemove);\n",
-    "Console.WriteLine(); \n",
-    "\n",
-    "Console.WriteLine($\"Компоненты игрового компьютера после удаления:\");\n",
-    "gamingComputer.ShowComponents();\n",
-    "Console.WriteLine();\n",
-    "\n",
-    "Console.WriteLine($\"Сравнение компонентов:\");\n",
-    "var c1 = new CPU { Name = \"Intel Core i5-13400F OEM\", Cores = 10, Price = 19299.99m };\n",
-    "var c2 = new CPU { Name = \"Intel Core i5-13400F OEM\", Cores = 10, Price = 19299.99m };\n",
-    "Console.WriteLine($\"Процессор №1 = Процессор №2: {c1 == c2}\");\n",
-    "\n",
-    "var r1 = new RAM { Name = \"Kingston FURY Beast Black\", Size = 32, Price = 9399.99m };\n",
-    "var r2 = new RAM { Name = \"Kingston FURY Beast Black\", Size = 32, Price = 10399.99m };\n",
-    "Console.WriteLine($\"Оперативная память №1 = Оперативная память №2: {r1 == r2}\");"
+    "Console.WriteLine(\"Удаляем компонент из игрового компьютера:\");\n",
+    "var gpu = new GPU(\"NVIDIA RTX 3080\", 800);\n",
+    "gamingComputer.RemoveComponent(gpu);\n",
+    "gamingComputer.DisplayComponents();\n",
+    "Console.WriteLine($\"Итоговая стоимость после удаления компонента: {gamingComputer.GetTotalPrice():C}\");\n"
    ]
   }
  ],
