--- a/Sprint4/Task1.ipynb
+++ b/Sprint4/Task1.ipynb
@@ -197,8 +197,91 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Toyota Camry запущен.\n",
+      "Текущая скорость: 0 км/ч\n",
+      "Harley-Davidson Street мотоцикл запущен.\n",
+      "Мотоцикл рычит!\n",
+      "Harley-Davidson Street мотоцикл остановлен.\n"
+     ]
+    }
+   ],
+   "source": [
+    "public interface IVehicle\n",
+    "{\n",
+    "    void Start();\n",
+    "    void Stop();\n",
+    "    int GetCurrentSpeed();\n",
+    "}\n",
+    "\n",
+    "public interface IMotorizedVehicle : IVehicle\n",
+    "{\n",
+    "    void RevEngine();\n",
+    "}\n",
+    "\n",
+    "public abstract class Vehicle : IVehicle\n",
+    "{\n",
+    "    public string Make { get; set; }\n",
+    "    public string Model { get; set; }\n",
+    "    protected int currentSpeed;\n",
+    "\n",
+    "    public abstract void Start(); \n",
+    "    public abstract void Stop(); \n",
+    "\n",
+    "    public virtual int GetCurrentSpeed()\n",
+    "    {\n",
+    "        return currentSpeed;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Car : Vehicle\n",
+    "{\n",
+    "    public override void Start()\n",
+    "    {\n",
+    "        currentSpeed = 0;\n",
+    "        Console.WriteLine($\"{Make} {Model} запущен.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Stop()\n",
+    "    {\n",
+    "        currentSpeed = 0;\n",
+    "        Console.WriteLine($\"{Make} {Model} остановлен.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Motorcycle : Vehicle, IMotorizedVehicle\n",
+    "{\n",
+    "    public override void Start()\n",
+    "    {\n",
+    "        currentSpeed = 0;\n",
+    "        Console.WriteLine($\"{Make} {Model} мотоцикл запущен.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Stop()\n",
+    "    {\n",
+    "        currentSpeed = 0;\n",
+    "        Console.WriteLine($\"{Make} {Model} мотоцикл остановлен.\");\n",
+    "    }\n",
+    "\n",
+    "    public void RevEngine()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Мотоцикл рычит!\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "IVehicle myCar = new Car { Make = \"Toyota\", Model = \"Camry\" };\n",
+    "myCar.Start();\n",
+    "Console.WriteLine($\"Текущая скорость: {myCar.GetCurrentSpeed()} км/ч\");\n",
+    "        \n",
+    "IVehicle myMotorcycle = new Motorcycle { Make = \"Harley-Davidson\", Model = \"Street\" };\n",
+    "myMotorcycle.Start();\n",
+    "((Motorcycle)myMotorcycle).RevEngine();\n",
+    "myMotorcycle.Stop();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -222,8 +305,136 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Кот породы: Беспородный и с именем: Мася начал бегать.\n",
+      "Текущая скорость: 0 км/ч\n",
+      "\n",
+      "Собака породы: Хаски и с именем: Мики начала играть на улице.\n",
+      "Собака испачкала лапки!\n",
+      "Собака породы: Хаски и с именем: Мики вернулась домой.\n",
+      "\n",
+      "Орел Безымянный взлетел.\n",
+      "Птица набирает высоту!\n",
+      "Птица разгоняется до 80 км/ч.\n",
+      "Текущая скорость: 80 км/ч\n"
+     ]
+    }
+   ],
+   "source": [
+    "public interface IAnimal\n",
+    "{\n",
+    "    void Start();\n",
+    "    void Stop();\n",
+    "    int GetSpeed();\n",
+    "}\n",
+    "\n",
+    "public interface IPlay : IAnimal\n",
+    "{\n",
+    "    void Dirty();\n",
+    "}\n",
+    "\n",
+    "public interface IFly : IAnimal\n",
+    "{\n",
+    "    void Hight();\n",
+    "}\n",
+    "\n",
+    "public abstract class Animal : IAnimal\n",
+    "{\n",
+    "    public string Breed { get; set; }\n",
+    "    public string Name { get; set; }\n",
+    "    protected int Speed;\n",
+    "\n",
+    "    public abstract void Start(); \n",
+    "    public abstract void Stop(); \n",
+    "\n",
+    "    public virtual int GetSpeed()\n",
+    "    {\n",
+    "        return Speed;\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Cat : Animal\n",
+    "{\n",
+    "    public override void Start()\n",
+    "    {\n",
+    "        Speed = 0;\n",
+    "        Console.WriteLine($\"Кот породы: {Breed} и с именем: {Name} начал бегать.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Stop()\n",
+    "    {\n",
+    "        Speed = 0;\n",
+    "        Console.WriteLine($\"Кот породы: {Breed} и с именем: {Name} прекратил бегать.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Dog : Animal, IPlay\n",
+    "{\n",
+    "    public override void Start()\n",
+    "    {\n",
+    "        Speed = 0;\n",
+    "        Console.WriteLine($\"Собака породы: {Breed} и с именем: {Name} начала играть на улице.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Stop()\n",
+    "    {\n",
+    "        Speed = 0;\n",
+    "        Console.WriteLine($\"Собака породы: {Breed} и с именем: {Name} вернулась домой.\");\n",
+    "    }\n",
+    "\n",
+    "    void IPlay.Dirty()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака испачкала лапки!\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Bird : Animal, IFly\n",
+    "{\n",
+    "    public override void Start()\n",
+    "    {\n",
+    "        Speed = 0;\n",
+    "        Console.WriteLine($\"{Breed} {Name} взлетел.\");\n",
+    "    }\n",
+    "\n",
+    "    public override void Stop()\n",
+    "    {\n",
+    "        Speed = 0;\n",
+    "        Console.WriteLine($\"{Breed} {Name} прекратил полет и сел на ветку.\");\n",
+    "    }\n",
+    "\n",
+    "    void IFly.Hight()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Птица набирает высоту!\");\n",
+    "    }\n",
+    "\n",
+    "    public void Accelerate(int amount)\n",
+    "    {\n",
+    "        Speed += amount;\n",
+    "        Console.WriteLine($\"Птица разгоняется до {Speed} км/ч.\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "IAnimal myCat = new Cat { Breed = \"Беспородный\", Name = \"Мася\" };\n",
+    "myCat.Start();\n",
+    "Console.WriteLine($\"Текущая скорость: {myCar.GetCurrentSpeed()} км/ч\");\n",
+    "Console.WriteLine();\n",
+    "\n",
+    "IPlay myDog = new Dog { Breed = \"Хаски\", Name = \"Мики\" };\n",
+    "myDog.Start();\n",
+    "myDog.Dirty();\n",
+    "myDog.Stop();\n",
+    "Console.WriteLine();\n",
+    "        \n",
+    "IFly myBird = new Bird { Breed = \"Орел\", Name = \"Безымянный\" };\n",
+    "myBird.Start();\n",
+    "myBird.Hight();\n",
+    "((Bird)myBird).Accelerate(80);\n",
+    "Console.WriteLine($\"Текущая скорость: {myBird.GetSpeed()} км/ч\");"
+   ]
   }
  ],
  "metadata": {
